public/styled/style.less
/*
Archy is a Sifu (師傅) in CSS (層疊樣式表). 
He's been doing it since the age of 13.
*/
@font-face {
    font-family: 'Dilem Handwritten';
    src: url('/topography/dilem-webfont.eot');
    src: url('/topography/dilem-webfont.eot?#iefix') format('embedded-opentype'),
         url('/topography/dilem-webfont.woff2') format('woff2'),
         url('/topography/dilem-webfont.woff') format('woff'),
         url('/topography/dilem-webfont.ttf') format('truetype'),
         url('/topography/dilem-webfont.svg#dilemhandwrittenmedium') format('svg');
    font-weight: normal;
    font-style: normal;

}
/* Archy animating himself! Such animating. Much indepdent. Very CSS-framework-phobic. Oh. */
.animationScaleUp {
	to { -webkit-transform: scale(1); 
		-moz-transform: scale(1);
		transform: scale(1);
		opacity: 1; 
	} 
}
@-ms-keyframes scaleUp{.animationScaleUp}
@-webkit-keyframes scaleUp {.animationScaleUp}
@-moz-keyframes scaleUp {.animationScaleUp}
@keyframes scaleUp {.animationScaleUp}

.tobeScaledUp{
	-ms-transform: scale(0.9);
	-webkit-transform: scale(0.9);
	-moz-transform: scale(0.9);
	transform: scale(0.9);
	opacity: 0;
}
.ScaledUp{
	-ms-animation: scaleUp 0.4s ease forwards;
	-webkit-animation: scaleUp 0.4s ease forwards;
	-moz-animation: scaleUp 0.4s ease forwards;
	animation: scaleUp 0.4s ease forwards;
}
.animationSpringOut {
  0%, 20%, 40%, 60%, 80%, 100% {
  	-ms-transition-timing-function:  cubic-bezier(.34,.67,.88,.34);
	-moz-transition-timing-function: cubic-bezier(.34,.67,.88,.34);
    -webkit-transition-timing-function: cubic-bezier(.34,.67,.88,.34); //http://cubic-bezier.com/
    transition-timing-function: cubic-bezier(.34,.67,.88,.34);
  }

  0% {
    opacity: 0;
    -ms-transform: scale3d(.3, .3, .3);
    -moz-transform: scale3d(.3, .3, .3);
    -webkit-transform: scale3d(.3, .3, .3);
    transform: scale3d(.3, .3, .3);
  }

  20% {
  	-ms-transform: scale3d(1, 1, 1);
  	-moz-transform: scale3d(1, 1, 1);
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }

  40% {
  	-ms-transform: scale3d(.9, .9, .9);
    -moz-transform: scale3d(.9, .9, .9);
    -webkit-transform: scale3d(.9, .9, .9);
    transform: scale3d(.9, .9, .9);
  }

  60% {
    opacity: 1;
    -ms-transform: scale3d(1.05, 1.05, 1.05);
    -moz-transform: scale3d(1.05, 1.05, 1.05);
    -webkit-transform: scale3d(1.05, 1.05, 1.05);
    transform: scale3d(1.05, 1.05, 1.05);
  }

  80% {
  	-ms-transform: scale3d(.985, .985, .985);
  	-moz-transform:scale3d(.985, .985, .985);
    -webkit-transform: scale3d(.985, .985, .985);
    transform: scale3d(.985, .985, .985);
  }

  100% {
    opacity: 1;
    -ms-transform: scale3d(1, 1, 1);
    -moz-transform: scale3d(1, 1, 1);
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
}
@-ms-keyframes scaleUp{.animationSpringOut}
@-moz-keyframes scaleUp {.animationSpringOut}
@-webkit-keyframes springOut {.animationSpringOut}
@keyframes springOut {.animationSpringOut}
.tobeSprangOut{
	opacity: 0;
}
.SprangOut {
	-ms-animation: springOut 0.4s ease forwards;
	-webkit-animation: springOut 0.4s ease forwards;
	-moz-animation: springOut 0.4s ease forwards;
	animation: springOut 0.4s ease forwards;
}

/*customized spinner originally crafted by Tobias Ahlin http://tobiasahlin.com/spinkit/ */
.spinner {
  margin: 0px auto;
  width: 50px;
  height: 50px;
  text-align: center;
  font-size: 10px;
  position: absolute;
  top:50px;
  margin-left: -15px;
  left:50%;
  -webkit-transition: 400ms opacity ease-out;
  -moz-transition: 400ms opacity ease-out;
  -o-transition: 400ms opacity ease-out;
  transition: 400ms opacity ease-out;
}

.spinner > div {
  background-color: #fff;
  height: 100%;
  width: 6px;
  display: inline-block;
  -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
  animation: stretchdelay 1.2s infinite ease-in-out;
}
.spinner .rect2 {
  -webkit-animation-delay: -1.1s;
  animation-delay: -1.1s;
}
.spinner .rect3 {
  -webkit-animation-delay: -1.0s;
  animation-delay: -1.0s;
}
.spinner .rect4 {
  -webkit-animation-delay: -0.9s;
  animation-delay: -0.9s;
}
.spinner .rect5 {
  -webkit-animation-delay: -0.8s;
  animation-delay: -0.8s;
}
@-webkit-keyframes stretchdelay {
  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
  20% { -webkit-transform: scaleY(1.0) }
}
@keyframes stretchdelay {
  0%, 40%, 100% { 
    transform: scaleY(0.4);
    -webkit-transform: scaleY(0.4);
  }  20% { 
    transform: scaleY(1.0);
    -webkit-transform: scaleY(1.0);
  }
}

/* Archy boostrapping himself! Such boostrapping. Much indepedent. Very CSS-framework-phobic. Oh. */
*{
	padding: 0;
	margin:0;
}
div,h1,h2,h3,h4{
	position: relative;
}
html,body{
	overflow: hidden;
}
body {
  font: 14px Times;
}
a{
	color:inherit;
	text-decoration: none;
	:hover{
		text-decoration: none;
		color:inherit;
	}
}
.threeIn1{
	width: 33.33333333%;
	box-sizing: border-box;
	float:left;
}
.over-hidden{
	overflow: hidden;
}
h1,h2,h3{
	text-align: center;
	margin: 0 !important;
	padding-bottom:40px;
	font-weight: normal;
}
h2{
	font-size: 23px;
}
h3{
	font-size: 19px;
	color:#404cff;
	a{
		border-bottom: 2px solid transparent;
		-webkit-transition: 350ms border ease-out;
		-moz-transition: 350ms border ease-out;
		-o-transition: 350ms border ease-out;
		transition: 350ms border ease-out;
	}
	a:hover{
		border-bottom: 2px solid #404cff;
	}
}
h4{
	font-size: 18px;
	border: 4px solid #fff;
	display: table;
	margin:0 auto;
	
	padding:20px
}
h1{
	font-weight: 800;
	font-size: 40px;
}
.wordsWordsWords{
	font-family: "Montserrat";
	padding:120px 0;
}
.hidden{
  opacity: 0;
  -webkit-transition: 500ms opacity ease-out;
  -moz-transition: 500ms opacity ease-out;
  -o-transition: 500ms opacity ease-out;
  transition: 500ms opacity ease-out;
}
.shown{
	opacity: 1;
}
.inline-block{
	display: inline-block;
	vertical-align: top;
}
.text-right{
	text-align: right;
}
.margin-right-80{
	margin-right: 80px
}
/* ... */

